syntax = "proto3";

package evolvest;

option go_package = ".;evolvest";

message GetRequest {
  string key = 1;
}

message GetResponse{
  string key = 1;
  string val = 2;
}

message SetRequest {
  string key = 1;
  string val = 2;
}

message SetResponse{
  string key = 1;
  bool existVal = 2;
  string oldVal = 3;
  string newVal = 4;
}

message DelRequest {
  string key = 1;
}

message DelResponse{
  string key = 1;
  string val = 2;
}

service EvolvestService {
  rpc Get(GetRequest) returns (GetResponse){}
  rpc Set(SetRequest) returns (SetResponse){}
  rpc Del(DelRequest) returns (DelResponse){}
}